--- a/MK-Proweb/index.html
+++ b/MK-Proweb/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MK Pemrograman Web</title>
+    <link rel="icon" href="icon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -26,7 +27,7 @@
                 <div class="p-6">
                     <div class="flex justify-between items-center mb-4">
                         <h2 class="text-xl font-bold text-gray-800">Pertemuan 1</h2>
-                        <i class="fas fa-code text-blue-500 text-2xl"></i>
+                        <i class="fas fa-globe-americas text-blue-500 text-2xl"></i>
                     </div>
                     <p class="text-gray-600 mb-4">Pengenalan Web Development</p>
                     <a href="Pertemuan-1/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -38,7 +39,7 @@
                 <div class="p-6">
                     <div class="flex justify-between items-center mb-4">
                         <h2 class="text-xl font-bold text-gray-800">Pertemuan 2</h2>
-                        <i class="fas fa-laptop-code text-blue-500 text-2xl"></i>
+                        <i class="fab fa-react text-blue-400 text-2xl"></i>
                     </div>
                     <p class="text-gray-600 mb-4">Dasar-dasar React.js & Laravel</p>
                     <a href="Pertemuan-2/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -50,7 +51,7 @@
             <div class="p-6">
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 3</h2>
-                    <i class="fas fa-html5 text-orange-500 text-2xl"></i>
+                    <i class="fas fa-database text-green-500 text-2xl"></i>
                 </div>
                 <p class="text-gray-600 mb-4">State Management dan Database</p>
                 <a href="Pertemuan-3/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -62,7 +63,7 @@
                 <div class="p-6">
                     <div class="flex justify-between items-center mb-4">
                         <h2 class="text-xl font-bold text-gray-800">Pertemuan 4</h2>
-                        <i class="fab fa-js text-yellow-500 text-2xl"></i>
+                        <i class="fas fa-exchange-alt text-purple-500 text-2xl"></i>
                     </div>
                     <p class="text-gray-600 mb-4">API & Integrasi</p>
                     <a href="Pertemuan-4/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -74,7 +75,7 @@
                 <div class="p-6">
                     <div class="flex justify-between items-center mb-4">
                         <h2 class="text-xl font-bold text-gray-800">Pertemuan 5</h2>
-                        <i class="fas fa-database text-green-500 text-2xl"></i>
+                        <i class="fas fa-route text-yellow-500 text-2xl"></i>
                     </div>
                     <p class="text-gray-600 mb-4">Routing dan Dynamic Data</p>
                     <a href="Pertemuan-5/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -86,7 +87,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 6</h2>
-                                    <i class="fas fa-network-wired text-purple-500 text-2xl"></i>
+                                    <i class="fas fa-user-lock text-red-500 text-2xl"></i>
                                 </div>
                                 <p class="text-gray-600 mb-4">Autentikasi (Login & Register)</p>
                                 <a href="Pertemuan-6/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -98,7 +99,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 7</h2>
-                                    <i class="fas fa-cloud text-blue-400 text-2xl"></i>
+                                    <i class="fas fa-link text-indigo-500 text-2xl"></i>
                                 </div>
                                 <p class="text-gray-600 mb-4">Integrasi Autentikasi</p>
                                 <a href="Pertemuan-7/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -110,7 +111,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 8</h2>
-                                    <i class="fas fa-cogs text-gray-700 text-2xl"></i>
+                                    <i class="fas fa-tasks text-gray-700 text-2xl"></i>
                                 </div>
                                 <p class="text-gray-600 mb-4">UTS</p>
                                 <a href="Pertemuan-8/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -122,7 +123,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 9</h2>
-                                    <i class="fas fa-server text-indigo-500 text-2xl"></i>
+                                    <i class="fas fa-graduation-cap text-blue-600 text-2xl"></i>
                                 </div>
                                 <p class="text-gray-600 mb-4">Advanced React.js & Laravel</p>
                                 <a href="Pertemuan-9/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -134,7 +135,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 10</h2>
-                                    <i class="fas fa-digital-tachograph text-teal-500 text-2xl"></i>
+                                    <i class="fas fa-file-upload text-orange-500 text-2xl"></i> 
                                 </div>
                                 <p class="text-gray-600 mb-4">Upload File dan Validasi</p>
                                 <a href="Pertemuan-10/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -146,7 +147,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 11</h2>
-                                    <i class="fas fa-robot text-gray-500 text-2xl"></i>
+                                    <i class="fas fa-sync text-green-600 text-2xl"></i>
                                 </div>
                                 <p class="text-gray-600 mb-4">Realtime Data dan WebSocket</p>
                                 <a href="Pertemuan-11/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -158,7 +159,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 12</h2>
-                                    <i class="fas fa-terminal text-black text-2xl"></i>
+                                    <i class="fas fa-rocket text-purple-600 text-2xl"></i>
                                 </div>
                                 <p class="text-gray-600 mb-4">Optimisasi dan Deployment</p>
                                 <a href="Pertemuan-12/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -170,7 +171,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 13</h2>
-                                    <i class="fas fa-mobile-alt text-green-500 text-2xl"></i>
+                                    <i class="fas fa-users text-blue-500 text-2xl"></i> 
                                 </div>
                                 <p class="text-gray-600 mb-4">Kolaborasi Tim</p>
                                 <a href="Pertemuan-13/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -182,7 +183,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 14</h2>
-                                    <i class="fas fa-desktop text-blue-600 text-2xl"></i>
+                                    <i class="fas fa-bug text-red-600 text-2xl"></i> 
                                 </div>
                                 <p class="text-gray-600 mb-4">Testing dan Debugging</p>
                                 <a href="Pertemuan-14/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -194,7 +195,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 15</h2>
-                                    <i class="fas fa-globe text-gray-800 text-2xl"></i>
+                                    <i class="fas fa-project-diagram text-indigo-600 text-2xl"></i>
                                 </div>
                                 <p class="text-gray-600 mb-4">Penyelesaian Proyek Besar</p>
                                 <a href="Pertemuan-15/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
@@ -206,7 +207,7 @@
                             <div class="p-6">
                                 <div class="flex justify-between items-center mb-4">
                                     <h2 class="text-xl font-bold text-gray-800">Pertemuan 16</h2>
-                                    <i class="fas fa-project-diagram text-red-500 text-2xl"></i>
+                                    <i class="fas fa-flag-checkered text-green-700 text-2xl"></i>
                                 </div>
                                 <p class="text-gray-600 mb-4">Tugas Besar</p>
                                 <a href="Pertemuan-16/index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Materi</a>
