--- a/MK-Proweb/Pertemuan-2/index.html
+++ b/MK-Proweb/Pertemuan-2/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dasar-dasar React.js & Laravel</title>
+    <link rel="icon" href="../icon.png" type="image/png">
     
     <!-- Reveal.js CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.css">
